--- a/public/blog/manifest.json
+++ b/public/blog/manifest.json
@@ -2,7 +2,10 @@
   "blogs": [
     "fuel-surcharge-leak.md",
     "december-spike.md",
-    "zombie-subscriptions.md"
+    "zombie-subscriptions.md",
+    "credit-card-rewards.md",
+    "grocery-inflation-tracker.md",
+    "recurring-fee-audit.md"
   ]
 }
 
