--- a/public/blog/manifest.json
+++ b/public/blog/manifest.json
@@ -1,12 +1,7 @@
 {
   "blogs": [
     "1-coffee-shop.md",
-    "fuel-surcharge-leak.md",
-    "december-spike.md",
-    "zombie-subscriptions.md",
-    "credit-card-rewards.md",
-    "grocery-inflation-tracker.md",
-    "recurring-fee-audit.md"
+    "2-shankey.md"
   ]
 }
 
